force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/CSBD_Denegacion_Auto_Solicitud__c.object-meta.xml
<CustomObject>
    <label>Denegación automática de oportunidades</label>
    <nameField>
        <displayFormat>ADM-SCO-{00000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Denegación automática de oportunidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>