force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Circuito_Contratacion_Online__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Circuito_Contratacion_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Circuito de contratación online</label>
    <type>Checkbox</type>
</CustomField>