force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Denegada__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Denegada__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>La oportunidad se cerrará con etapa de ventas &quot;Perdida&quot;.</inlineHelpText>
    <label>Denegar</label>
    <type>Checkbox</type>
</CustomField>