force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Enviar_Correo_Auto__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Enviar_Correo_Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar correo a cliente</label>
    <type>Checkbox</type>
</CustomField>