force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Escala_Maestra_Desde__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Escala_Maestra_Desde__c</fullName>
    <inlineHelpText>Este rango solo aplica para oportunidades vinculadas a clientes para los que se conoce su escala maestra.</inlineHelpText>
    <label>Escala maestra - Desde</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>