force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Escala_Maestra_Hasta__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Escala_Maestra_Hasta__c</fullName>
    <label>Escala maestra - Hasta</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>