force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Excluir_Clientes_Limite__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Excluir_Clientes_Limite__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Si se marca, la regla no aplicará para oportunidades vinculadas a clientes que dispongan de &quot;Iimporte disponible préstamos oficinas&quot;.</inlineHelpText>
    <label>Excluir clientes con importe disponible</label>
    <type>Checkbox</type>
</CustomField>