force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Importe_Hasta__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Importe_Hasta__c</fullName>
    <label>Importe - Hasta</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>