force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Orden__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Orden__c</fullName>
    <inlineHelpText>El orden que ocupará la presente regla dentro del conjunto de reglas existentes para el mismo tipo de oportunidad.</inlineHelpText>
    <label>Orden de evaluación</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>