force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Plantilla_Correo_Catalan__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Plantilla_Correo_Catalan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla de correo en catalán</label>
    <length>255</length>
    <type>Text</type>
</CustomField>