force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Record_Type_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Record_Type_Oportunidad__c</fullName>
    <label>Tipo de oportunidad</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSBD_Prestamo</fullName>
                <label>Préstamo</label>
            </value>
            <value>
                <fullName>CSBD_Compra_Estrella</fullName>
                <label>Compra Estrella</label>
            </value>
            <value>
                <fullName>CSBD_Hipoteca</fullName>
                <label>Hipoteca</label>
            </value>
            <value>
                <fullName>CSBD_Renting</fullName>
                <label>Renting</label>
            </value>
            <value>
                <fullName>CC_Chat</fullName>
                <label>Chat</label>
            </value>
            <value>
                <fullName>CSBD_CMN</fullName>
                <label>CMN</label>
            </value>
            <value>
                <fullName>CSBD_CMB</fullName>
                <label>CMB</label>
            </value>
            <value>
                <fullName>CSBD_Accion_Comercial</fullName>
                <label>Acción comercial</label>
            </value>
            <value>
                <fullName>CSBD_TPV</fullName>
                <label>TPV</label>
            </value>
            <value>
                <fullName>CSBD_Desistimiento</fullName>
                <label>Desistimiento</label>
            </value>
            <value>
                <fullName>CSBD_DesistimientoPAI</fullName>
                <label>Desistimiento PAI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>