force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Resolucion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolución de la denegación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>