force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/fields/CSBD_Scoring_Riesgo__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Scoring_Riesgo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scoring Riesgo</label>
    <length>60</length>
    <type>Text</type>
</CustomField>