force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/validationRules/CSBD_Requerir_Plantilla_Si_Envio_Correo.validationRule-meta.xml
<ValidationRule>
    <fullName>CSBD_Requerir_Plantilla_Si_Envio_Correo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   CSBD_Enviar_Correo_Auto__c,
   OR(
      ISBLANK(CSBD_Plantilla_Correo_Castellano__c),
      ISBLANK(CSBD_Plantilla_Correo_Catalan__c)
   )
)</errorConditionFormula>
    <errorDisplayField>CSBD_Plantilla_Correo_Catalan__c</errorDisplayField>
    <errorMessage>Debe informar las plantillas que se usarán para el envío de correo a cliente en todos los idiomas.</errorMessage>
</ValidationRule>