force-app/main/default/objects/CSBD_Denegacion_Auto_Solicitud__c/validationRules/CSBD_Requerir_Resolucion_Si_Denegar.validationRule-meta.xml
<ValidationRule>
    <fullName>CSBD_Requerir_Resolucion_Si_Denegar</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CSBD_Denegada__c, ISBLANK(CSBD_Resolucion__c))</errorConditionFormula>
    <errorDisplayField>CSBD_Resolucion__c</errorDisplayField>
    <errorMessage>Debe informar la resolución que se usará para el cierre de la oportunidad</errorMessage>
</ValidationRule>